# scanimation

./: .gitignore.txt  README.md  pyproject.toml  requirements.txt
examples/: scanimate.ipynb
examples/seal/images/scanimated_N_5_b_3.0mm/: preview.mov
examples/seal/images/scanimated_N_5_b_4.0mm/: preview.mov
examples/seal/images/scanimated_N_6_b_3mm/: preview.mov
scanimation/: __init__.py  barrier.py  interlace.py  lamp_template.py  process.py  utils.py  view.py
